# OCR_C-

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.linux  build_linux.ps1  build_linux.sh
rust_integration/include/: ocr_ffi.h
src/: main.cpp  ocr_ffi.cpp  ocr_ffi.h
src/application/: ProcessImageUseCase.hpp
src/domain/builders/: ITextBuilder.hpp  TextBuilderFactory.hpp  TextBuilders.hpp
src/domain/common/: Result.hpp
src/domain/entities/: BoundingBox.hpp  TextBlock.hpp
src/domain/ports/: OcrEngine.hpp
src/domain/services/: LayoutService.hpp
src/infrastructure/adapters/: OnnxOcrAdapter.cpp  OnnxOcrAdapter.hpp
src/infrastructure/utils/: OcrImageProcessor.cpp  OcrImageProcessor.hpp  OnnxSessionHelper.hpp  PlatformUtils.cpp  PlatformUtils.hpp
